# GenICam-GenApi-Starter-Sample

./: LICENSE  README.md
GenApi/: CMakeLists.txt  main.cpp
